# variant-counter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
derived/: Cargo.toml
derived/src/: attrs.rs  check.rs  erase.rs  lib.rs  parsed.rs  record.rs
examples/: generics.rs  level.rs  platform.rs
src/: lib.rs
tests/: basic.rs  complex.rs  generics.rs  group.rs  ignore.rs  no_std.rs  stats.rs  weight.rs
