[package]
name = "variant_counter"
version = "0.2.0"
edition = "2018"
description = "Rust's Enum variant counter"
repository = "https://github.com/Folyd/variant-counter"
documentation = "https://docs.rs/variant_counter"
readme = "README.md"
license = "MIT"

[workspace]
members = ["derived"]

[features]
check = ["variant_counter_derived/check"]
erase = ["variant_counter_derived/erase"]

[dependencies]
variant_counter_derived = { path = "./derived", version = "0.2.0" }

[dev-dependencies]
variant_counter_derived = { path = "./derived", version = "0.2.0", features = [
    "check",
    "erase",
] }
