[package]
name = "variant_counter"
version = "0.3.0"
edition = "2018"
description = "Rust's Enum variant counter"
repository = "https://github.com/Folyd/variant-counter"
documentation = "https://docs.rs/variant_counter"
readme = "README.md"
license = "MIT"

[workspace]
members = ["derived"]

[features]
default = ["std"]
full = ["variant_counter_derived/full"]
std = ["variant_counter_derived/std"]
check = ["variant_counter_derived/check"]
erase = ["variant_counter_derived/erase"]
stats = ["variant_counter_derived/stats"]

[dependencies]
variant_counter_derived = { path = "./derived", version = "0.3" }

[dev-dependencies]
variant_counter_derived = { path = "./derived", version = "0.3", features = [
    "full",
] }
