[package]
name = "variant_counter_derived"
version = "0.2.0"
edition = "2018"
description = "Rust's Enum variant counter"
repository = "https://github.com/Folyd/variant-counter"
documentation = "https://docs.rs/variant_counter"
license = "MIT"

[lib]
proc-macro = true

[features]
check = []
erase = []

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"